	- removed option "result_file" in favor of "report 1"
	- removed html_enc parameter from print_driver_info()
	- removed option "log_devices", because MESS already has the -listdevices option
	- changed valgrind outfile file to <driver_string>.valgrind_<pid>
	- valgrind output files are now written to the "output_folder"
	- added option "valgrind_binary" to specify the valgrind binary location
	- added option "valgrind_parameters" to specify the valgrind parameters (--log-file is added by mame_regtest)
	- put valgrind code into compile-time defijne USE_VALGRIND
	- removed option "validate_listxml" - DTD validation is now always performed
	- using folder "mrt_temp" to store temporary files
		- tmp_stdout
		- tmp_stderr
		- mrt_debugscript
		- dummy_ini folder
	- added function is_absolute_path()
	- changed most relative paths to be absolute ones
	- restructed get_executable() a bit
	- empty "additional_options" were appended
	- quoted all parts of command-line string, that could contain whitespaces as well as the whole command-line string
	- added function append_quoted_string()
	- added function append_driver_info()
	- added option "hack_pinmame" (still hangs at warning screens)
	- CWD is changed to dummy_root to get all output files (including error.log)
	- removed option "use_log", because it doesn't need any special handling anymore and can be specified via the "additional_options" option
	- rewrote configuration code to utilize a structure for initialisation to be able to re-use it
	- renamed config_get_* to config_read_*
	- renamed all configuration variables to config_*
	- re-grouped the static variables
	- removed unnecessary static variable "use_custom_list"
	- moved the configuration code to config.c/.h
	- cleaned up global variables

	create_report
	- initial version

	create_image_xml
	- added version number

0.69
	- moved mrt_mkdir() to common.c/.h
	- added "get_filename" to common.c/.h